# near-field-chaos

./: README.md  build_deploy.sh
firmware/: CMakeLists.txt  main.c
firmware/console/: console.c  console.h  console_commands.c  console_commands.h
firmware/led/: ws2812_led.c  ws2812_led.h
firmware/nfc/: devices.h  nfc.c  nfc.h  nfc_status.h
firmware/nfc/drivers/pn532/: pn532.c  pn532.h  pn532_hsu.c  pn532_hsu.h  pn532_spi.c  pn532_spi.h
firmware/nfc/drivers/trf7970a/: trf7970a.c  trf7970a.h
firmware/st25tb/: st25tb.c  st25tb.h  st25tb_cmd.c  st25tb_cmd.h  st25tb_common.c  st25tb_common.h  st25tb_tag_storage.c  st25tb_tag_storage.h  st25tb_tear_off.c  st25tb_tear_off.h
firmware/standalone_mode/: standalone_mode.c  standalone_mode.h  t4t_ce.c  t4t_ce.h
firmware/uart/: pio_uart.c  pio_uart.h
firmware/utils/: task.c  task.h  utils.c  utils.h
